--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/gsap": "^3.0.0",
     "google-map-react": "^2.2.1",
     "gsap": "^3.12.4",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "scrollmagic": "^2.0.8",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
